--- a/Python Files/Practice Files/ML file/pandas_questions.ipynb
+++ b/Python Files/Practice Files/ML file/pandas_questions.ipynb
@@ -12,16 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "255cf0f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample dataset created successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import required libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
     "# Create sample data for demonstration\n",
     "np.random.seed(42)\n",
@@ -50,10 +57,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9c651f13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Shape: (10, 6)\n",
+      "\n",
+      "Column Names:\n",
+      "['Name', 'Age', 'Salary', 'Department', 'Experience', 'Performance_Score']\n",
+      "\n",
+      "Data Types:\n",
+      "Name                  object\n",
+      "Age                    int64\n",
+      "Salary               float64\n",
+      "Department            object\n",
+      "Experience             int64\n",
+      "Performance_Score    float64\n",
+      "dtype: object\n",
+      "\n",
+      "First 5 rows:\n",
+      "      Name  Age   Salary Department  Experience  Performance_Score\n",
+      "0    Alice   25  50000.0         IT           2               85.0\n",
+      "1      Bob   30  60000.0         HR           5               92.0\n",
+      "2  Charlie   35  70000.0         IT           8               88.0\n",
+      "3    Diana   28  55000.0    Finance           3               90.0\n",
+      "4      Eve   32  65000.0         IT           6               87.0\n",
+      "\n",
+      "Dataset Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10 entries, 0 to 9\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Name               10 non-null     object \n",
+      " 1   Age                10 non-null     int64  \n",
+      " 2   Salary             9 non-null      float64\n",
+      " 3   Department         10 non-null     object \n",
+      " 4   Experience         10 non-null     int64  \n",
+      " 5   Performance_Score  9 non-null      float64\n",
+      "dtypes: float64(2), int64(2), object(2)\n",
+      "memory usage: 608.0+ bytes\n",
+      "None\n",
+      "\n",
+      "Basic Statistics:\n",
+      "             Age        Salary  Experience  Performance_Score\n",
+      "count  10.000000      9.000000   10.000000           9.000000\n",
+      "mean   29.600000  61111.111111    4.700000          89.111111\n",
+      "std     3.204164   8022.537698    2.750757           2.934469\n",
+      "min    25.000000  50000.000000    1.000000          85.000000\n",
+      "25%    27.250000  55000.000000    2.250000          87.000000\n",
+      "50%    29.500000  60000.000000    4.500000          89.000000\n",
+      "75%    31.750000  68000.000000    6.750000          91.000000\n",
+      "max    35.000000  72000.000000    9.000000          94.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Display basic information about the dataset\n",
     "print(\"Dataset Shape:\", df.shape)\n",
@@ -81,10 +143,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "df88aef2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employees with age > 30:\n",
+      "      Name  Age Department\n",
+      "2  Charlie   35         IT\n",
+      "4      Eve   32         IT\n",
+      "7    Henry   31         IT\n",
+      "9     Jack   33    Finance\n",
+      "\n",
+      "IT Department employees:\n",
+      "      Name   Salary  Experience\n",
+      "0    Alice  50000.0           2\n",
+      "2  Charlie  70000.0           8\n",
+      "4      Eve  65000.0           6\n",
+      "7    Henry  72000.0           7\n",
+      "\n",
+      "IT employees with experience > 5 years:\n",
+      "      Name  Age  Experience   Salary\n",
+      "2  Charlie   35           8  70000.0\n",
+      "4      Eve   32           6  65000.0\n",
+      "7    Henry   31           7  72000.0\n",
+      "\n",
+      "Employees with salary between 55000 and 70000:\n",
+      "      Name   Salary Department\n",
+      "1      Bob  60000.0         HR\n",
+      "2  Charlie  70000.0         IT\n",
+      "3    Diana  55000.0    Finance\n",
+      "4      Eve  65000.0         IT\n",
+      "6    Grace  58000.0    Finance\n",
+      "9     Jack  68000.0    Finance\n"
+     ]
+    }
+   ],
    "source": [
     "# Filter employees with age > 30\n",
     "print(\"Employees with age > 30:\")\n",
@@ -122,10 +219,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6502df09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean values by Department:\n",
+      "                  Age        Salary  Experience  Performance_Score\n",
+      "Department                                                        \n",
+      "Finance     29.333333  60333.333333    4.666667               90.5\n",
+      "HR          28.333333  56000.000000    3.333333               89.0\n",
+      "IT          30.750000  64250.000000    5.750000               88.5\n",
+      "\n",
+      "Detailed statistics by Department:\n",
+      "                  Age                Salary                Experience  \\\n",
+      "                 mean min max          mean   median count       mean   \n",
+      "Department                                                              \n",
+      "Finance     29.333333  27  33  60333.333333  58000.0     3   4.666667   \n",
+      "HR          28.333333  26  30  56000.000000  56000.0     2   3.333333   \n",
+      "IT          30.750000  25  35  64250.000000  67500.0     4   5.750000   \n",
+      "\n",
+      "                     Performance_Score        \n",
+      "                 std              mean count  \n",
+      "Department                                    \n",
+      "Finance     3.785939              90.5     2  \n",
+      "HR          2.081666              89.0     3  \n",
+      "IT          2.629956              88.5     4  \n",
+      "\n",
+      "Average salary by Department and Experience level:\n",
+      "Department  Experience_Level\n",
+      "Finance     Junior              56500.0\n",
+      "            Senior              68000.0\n",
+      "HR          Junior              52000.0\n",
+      "            Senior              60000.0\n",
+      "IT          Junior              50000.0\n",
+      "            Senior              69000.0\n",
+      "Name: Salary, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Group by Department and calculate means\n",
     "print(\"Mean values by Department:\")\n",
@@ -163,10 +298,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3efe7ecf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values in each column:\n",
+      "Name                 0\n",
+      "Age                  0\n",
+      "Salary               1\n",
+      "Department           0\n",
+      "Experience           0\n",
+      "Performance_Score    1\n",
+      "Experience_Level     0\n",
+      "dtype: int64\n",
+      "\n",
+      "Percentage of missing values:\n",
+      "Name                  0.0\n",
+      "Age                   0.0\n",
+      "Salary               10.0\n",
+      "Department            0.0\n",
+      "Experience            0.0\n",
+      "Performance_Score    10.0\n",
+      "Experience_Level      0.0\n",
+      "dtype: float64\n",
+      "\n",
+      "Rows with missing values:\n",
+      "    Name  Age   Salary Department  Experience  Performance_Score  \\\n",
+      "5  Frank   29      NaN         HR           4               89.0   \n",
+      "6  Grace   27  58000.0    Finance           2                NaN   \n",
+      "\n",
+      "  Experience_Level  \n",
+      "5           Senior  \n",
+      "6           Junior  \n",
+      "\n",
+      "After handling missing values:\n",
+      "Name                 0\n",
+      "Age                  0\n",
+      "Salary               0\n",
+      "Department           0\n",
+      "Experience           0\n",
+      "Performance_Score    0\n",
+      "Experience_Level     0\n",
+      "dtype: int64\n",
+      "\n",
+      "Cleaned dataset:\n",
+      "      Name  Age        Salary Department  Experience  Performance_Score  \\\n",
+      "0    Alice   25  50000.000000         IT           2               85.0   \n",
+      "1      Bob   30  60000.000000         HR           5               92.0   \n",
+      "2  Charlie   35  70000.000000         IT           8               88.0   \n",
+      "3    Diana   28  55000.000000    Finance           3               90.0   \n",
+      "4      Eve   32  65000.000000         IT           6               87.0   \n",
+      "5    Frank   29  61111.111111         HR           4               89.0   \n",
+      "6    Grace   27  58000.000000    Finance           2               89.0   \n",
+      "7    Henry   31  72000.000000         IT           7               94.0   \n",
+      "8      Ivy   26  52000.000000         HR           1               86.0   \n",
+      "9     Jack   33  68000.000000    Finance           9               91.0   \n",
+      "\n",
+      "  Experience_Level  \n",
+      "0           Junior  \n",
+      "1           Senior  \n",
+      "2           Senior  \n",
+      "3           Junior  \n",
+      "4           Senior  \n",
+      "5           Senior  \n",
+      "6           Junior  \n",
+      "7           Senior  \n",
+      "8           Junior  \n",
+      "9           Senior  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dell\\AppData\\Local\\Temp\\ipykernel_45160\\3347296340.py:22: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df_cleaned['Salary'].fillna(mean_salary, inplace=True)\n",
+      "C:\\Users\\dell\\AppData\\Local\\Temp\\ipykernel_45160\\3347296340.py:26: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df_cleaned['Performance_Score'].fillna(median_performance, inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Check for missing values\n",
     "print(\"Missing values in each column:\")\n",
@@ -213,10 +438,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "53393c76",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset with new columns:\n",
+      "      Name  Salary_per_Experience Performance_Category  Total_Score\n",
+      "0    Alice           25000.000000                 Good         73.5\n",
+      "1      Bob           12000.000000            Excellent         95.2\n",
+      "2  Charlie            8750.000000                 Good        110.3\n",
+      "3    Diana           18333.333333            Excellent         83.0\n",
+      "4      Eve           10833.333333                 Good         98.2\n",
+      "\n",
+      "Top 3 employees by Salary:\n",
+      "      Name   Salary Department\n",
+      "7    Henry  72000.0         IT\n",
+      "2  Charlie  70000.0         IT\n",
+      "9     Jack  68000.0    Finance\n",
+      "\n",
+      "Top 3 employees by Performance Score:\n",
+      "    Name  Performance_Score Department\n",
+      "7  Henry               94.0         IT\n",
+      "1    Bob               92.0         HR\n",
+      "9   Jack               91.0    Finance\n",
+      "\n",
+      "Top 3 employees by Total Score:\n",
+      "      Name  Total_Score Performance_Category\n",
+      "9     Jack        116.1            Excellent\n",
+      "2  Charlie        110.3                 Good\n",
+      "7    Henry        106.9            Excellent\n",
+      "\n",
+      "Top 3 employees by Salary per Experience:\n",
+      "    Name  Salary_per_Experience  Experience\n",
+      "8    Ivy                52000.0           1\n",
+      "6  Grace                29000.0           2\n",
+      "0  Alice                25000.0           2\n"
+     ]
+    }
+   ],
    "source": [
     "# Create new columns\n",
     "df_final = df_cleaned.copy()\n",
@@ -259,8 +522,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
