--- a/Python Files/Practice Files/ML file/python_basics.ipynb
+++ b/Python Files/Practice Files/ML file/python_basics.ipynb
@@ -22,10 +22,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f652b7b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiplication table for 7:\n",
+      "-------------------------\n",
+      "7 x 1 = 7\n",
+      "7 x 2 = 14\n",
+      "7 x 3 = 21\n",
+      "7 x 4 = 28\n",
+      "7 x 5 = 35\n",
+      "7 x 6 = 42\n",
+      "7 x 7 = 49\n",
+      "7 x 8 = 56\n",
+      "7 x 9 = 63\n",
+      "7 x 10 = 70\n"
+     ]
+    }
+   ],
    "source": [
     "# Multiplication table function\n",
     "def multiplication_table(number, limit=10):\n",
@@ -52,10 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1f5bfb5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial of 5 = 120\n",
+      "Factorial of 6 = 720\n",
+      "Factorial of 8 = 40320\n",
+      "Factorial of 10 = 3628800\n"
+     ]
+    }
+   ],
    "source": [
     "# Recursive factorial function\n",
     "def factorial_recursive(n):\n",
@@ -85,10 +115,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "30f5427e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text: 'Hello World'\n",
+      "Vowel count: 3\n",
+      "Vowels found: ['e', 'o', 'o']\n",
+      "----------------------------------------\n",
+      "Text: 'Python Programming'\n",
+      "Vowel count: 4\n",
+      "Vowels found: ['o', 'o', 'a', 'i']\n",
+      "----------------------------------------\n",
+      "Text: 'Data Science and Machine Learning'\n",
+      "Vowel count: 12\n",
+      "Vowels found: ['a', 'a', 'i', 'e', 'e', 'a', 'a', 'i', 'e', 'e', 'a', 'i']\n",
+      "----------------------------------------\n",
+      "Text: 'Artificial Intelligence'\n",
+      "Vowel count: 10\n",
+      "Vowels found: ['A', 'i', 'i', 'i', 'a', 'I', 'e', 'i', 'e', 'e']\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# Function to count vowels\n",
     "def count_vowels(text):\n",
@@ -131,10 +184,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ac43a34e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [12, 45, 7, 23, 56, 89, 34, 67, 8, 90, 15]\n",
+      "\n",
+      "After adding elements: [12, 45, 7, 23, 56, 89, 34, 67, 8, 90, 15, 100, 105, 110]\n",
+      "After removing 7 and last element (110): [12, 45, 23, 56, 89, 34, 67, 8, 90, 15, 100, 105]\n",
+      "Sorted ascending: [8, 12, 15, 23, 34, 45, 56, 67, 89, 90, 100, 105]\n",
+      "Sorted descending: [105, 100, 90, 89, 67, 56, 45, 34, 23, 15, 12, 8]\n",
+      "Even numbers: [12, 56, 34, 8, 90, 100]\n",
+      "Odd numbers: [45, 23, 89, 67, 15, 105]\n",
+      "Numbers greater than 50: [56, 89, 67, 90, 100, 105]\n",
+      "\n",
+      "List Statistics:\n",
+      "Length: 12\n",
+      "Sum: 644\n",
+      "Average: 53.67\n",
+      "Maximum: 105\n",
+      "Minimum: 8\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a sample list\n",
     "numbers = [12, 45, 7, 23, 56, 89, 34, 67, 8, 90, 15]\n",
@@ -177,8 +253,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
