small line updates

--- a/Python Files/Practice Files/ML file/numpy_questions.ipynb
+++ b/Python Files/Practice Files/ML file/numpy_questions.ipynb
@@ -11,6 +11,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c29495f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b124f5ce",
    "metadata": {},
