--- a/Python Files/Practice Files/ML file/python_basics.ipynb
+++ b/Python Files/Practice Files/ML file/python_basics.ipynb
@@ -250,6 +250,234 @@
     "print(f\"Maximum: {max(numbers)}\")\n",
     "print(f\"Minimum: {min(numbers)}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d2c333e",
+   "metadata": {},
+   "source": [
+    "## 5. Check Prime Numbers\n",
+    "\n",
+    "Write a function to check if a number is prime and find all prime numbers within a given range."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "80f842bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prime number checks:\n",
+      "2 is prime\n",
+      "17 is prime\n",
+      "25 is not prime\n",
+      "29 is prime\n",
+      "31 is prime\n",
+      "49 is not prime\n",
+      "53 is prime\n",
+      "97 is prime\n",
+      "100 is not prime\n",
+      "\n",
+      "========================================\n",
+      "Prime numbers between 1 and 20: [2, 3, 5, 7, 11, 13, 17, 19]\n",
+      "Count: 8\n",
+      "------------------------------\n",
+      "Prime numbers between 50 and 70: [53, 59, 61, 67]\n",
+      "Count: 4\n",
+      "------------------------------\n",
+      "Prime numbers between 90 and 110: [97, 101, 103, 107, 109]\n",
+      "Count: 5\n",
+      "------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to check if a number is prime\n",
+    "def is_prime(n):\n",
+    "    if n < 2:\n",
+    "        return False\n",
+    "    if n == 2:\n",
+    "        return True\n",
+    "    if n % 2 == 0:\n",
+    "        return False\n",
+    "    \n",
+    "    # Check odd divisors up to sqrt(n)\n",
+    "    for i in range(3, int(n**0.5) + 1, 2):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "# Function to find all prime numbers in a range\n",
+    "def find_primes_in_range(start, end):\n",
+    "    primes = []\n",
+    "    for num in range(start, end + 1):\n",
+    "        if is_prime(num):\n",
+    "            primes.append(num)\n",
+    "    return primes\n",
+    "\n",
+    "# Test individual numbers\n",
+    "test_numbers = [2, 17, 25, 29, 31, 49, 53, 97, 100]\n",
+    "print(\"Prime number checks:\")\n",
+    "for num in test_numbers:\n",
+    "    result = is_prime(num)\n",
+    "    print(f\"{num} is {'prime' if result else 'not prime'}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*40)\n",
+    "\n",
+    "# Find primes in ranges\n",
+    "ranges = [(1, 20), (50, 70), (90, 110)]\n",
+    "for start, end in ranges:\n",
+    "    primes = find_primes_in_range(start, end)\n",
+    "    print(f\"Prime numbers between {start} and {end}: {primes}\")\n",
+    "    print(f\"Count: {len(primes)}\")\n",
+    "    print(\"-\" * 30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9cca4fc",
+   "metadata": {},
+   "source": [
+    "## 6. Dictionary Operations and Student Grade Management\n",
+    "\n",
+    "Create a student grade management system using dictionaries to demonstrate various dictionary operations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e0b1ae8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Student Data:\n",
+      "Alice: {'Math': 85, 'Science': 92, 'English': 78}\n",
+      "Bob: {'Math': 92, 'Science': 87, 'English': 84}\n",
+      "Charlie: {'Math': 78, 'Science': 90, 'English': 88}\n",
+      "Diana: {'Math': 95, 'Science': 89, 'English': 91}\n",
+      "\n",
+      "After adding Eve:\n",
+      "Eve: {'Math': 88, 'Science': 85, 'English': 90}\n",
+      "\n",
+      "After updates:\n",
+      "Alice: {'Math': 85, 'Science': 92, 'English': 78, 'History': 82}\n",
+      "Bob: {'Math': 95, 'Science': 87, 'English': 84}\n",
+      "\n",
+      "Student Averages:\n",
+      "Alice: 84.25\n",
+      "Bob: 88.67\n",
+      "Charlie: 85.33\n",
+      "Diana: 91.67\n",
+      "Eve: 87.67\n",
+      "\n",
+      "Subject Averages:\n",
+      "Science: 88.60\n",
+      "History: 82.00\n",
+      "Math: 88.20\n",
+      "English: 86.20\n",
+      "\n",
+      "Top Overall Student: Diana (Average: 91.67)\n",
+      "\n",
+      "Top Performers by Subject:\n",
+      "English: Diana (91)\n",
+      "History: Alice (82)\n",
+      "Math: Bob (95)\n",
+      "Science: Alice (92)\n",
+      "\n",
+      "Dictionary Comprehensions:\n",
+      "High performers (>85 average): {'Bob': 88.67, 'Charlie': 85.33, 'Diana': 91.67, 'Eve': 87.67}\n",
+      "Math grades: {'Alice': 85, 'Bob': 95, 'Charlie': 78, 'Diana': 95, 'Eve': 88}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Student Grade Management System using dictionaries\n",
+    "students = {\n",
+    "    \"Alice\": {\"Math\": 85, \"Science\": 92, \"English\": 78},\n",
+    "    \"Bob\": {\"Math\": 92, \"Science\": 87, \"English\": 84},\n",
+    "    \"Charlie\": {\"Math\": 78, \"Science\": 90, \"English\": 88},\n",
+    "    \"Diana\": {\"Math\": 95, \"Science\": 89, \"English\": 91}\n",
+    "}\n",
+    "\n",
+    "print(\"Original Student Data:\")\n",
+    "for student, grades in students.items():\n",
+    "    print(f\"{student}: {grades}\")\n",
+    "print()\n",
+    "\n",
+    "# 1. Add a new student\n",
+    "students[\"Eve\"] = {\"Math\": 88, \"Science\": 85, \"English\": 90}\n",
+    "print(\"After adding Eve:\")\n",
+    "print(f\"Eve: {students['Eve']}\")\n",
+    "print()\n",
+    "\n",
+    "# 2. Update grades for an existing student\n",
+    "students[\"Alice\"][\"History\"] = 82  # Add new subject\n",
+    "students[\"Bob\"][\"Math\"] = 95      # Update existing grade\n",
+    "print(\"After updates:\")\n",
+    "print(f\"Alice: {students['Alice']}\")\n",
+    "print(f\"Bob: {students['Bob']}\")\n",
+    "print()\n",
+    "\n",
+    "# 3. Calculate average grade for each student\n",
+    "print(\"Student Averages:\")\n",
+    "student_averages = {}\n",
+    "for student, grades in students.items():\n",
+    "    average = sum(grades.values()) / len(grades.values())\n",
+    "    student_averages[student] = round(average, 2)\n",
+    "    print(f\"{student}: {average:.2f}\")\n",
+    "print()\n",
+    "\n",
+    "# 4. Find subject averages\n",
+    "subjects = set()\n",
+    "for grades in students.values():\n",
+    "    subjects.update(grades.keys())\n",
+    "\n",
+    "print(\"Subject Averages:\")\n",
+    "for subject in subjects:\n",
+    "    total = 0\n",
+    "    count = 0\n",
+    "    for student, grades in students.items():\n",
+    "        if subject in grades:\n",
+    "            total += grades[subject]\n",
+    "            count += 1\n",
+    "    if count > 0:\n",
+    "        average = total / count\n",
+    "        print(f\"{subject}: {average:.2f}\")\n",
+    "print()\n",
+    "\n",
+    "# 5. Find top student and top performer in each subject\n",
+    "top_student = max(student_averages, key=student_averages.get)\n",
+    "print(f\"Top Overall Student: {top_student} (Average: {student_averages[top_student]})\")\n",
+    "print()\n",
+    "\n",
+    "print(\"Top Performers by Subject:\")\n",
+    "for subject in sorted(subjects):\n",
+    "    best_grade = 0\n",
+    "    best_student = \"\"\n",
+    "    for student, grades in students.items():\n",
+    "        if subject in grades and grades[subject] > best_grade:\n",
+    "            best_grade = grades[subject]\n",
+    "            best_student = student\n",
+    "    if best_student:\n",
+    "        print(f\"{subject}: {best_student} ({best_grade})\")\n",
+    "\n",
+    "# 6. Dictionary comprehension examples\n",
+    "print(\"\\nDictionary Comprehensions:\")\n",
+    "# Students with average above 85\n",
+    "high_performers = {student: avg for student, avg in student_averages.items() if avg > 85}\n",
+    "print(f\"High performers (>85 average): {high_performers}\")\n",
+    "\n",
+    "# Math grades only\n",
+    "math_grades = {student: grades[\"Math\"] for student, grades in students.items() if \"Math\" in grades}\n",
+    "print(f\"Math grades: {math_grades}\")"
+   ]
   }
  ],
  "metadata": {
