--- a/Python Files/Practice Files/ML file/python_basics.ipynb
+++ b/Python Files/Practice Files/ML file/python_basics.ipynb
@@ -2,12 +2,69 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d429b182",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "\n",
+    "# BIRLA INSTITUTE OF TECHNOLOGY  \n",
+    "## NOIDA OFF CAMPUS, MESRA\n",
+    "\n",
+    "![BIT Logo](https://upload.wikimedia.org/wikipedia/en/d/d2/Birla_Institute_of_Technology_Mesra.png)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## PRACTICAL FILE  \n",
+    "## MACHINE LEARNING  \n",
+    "\n",
+    "**NAME**: Yunika Chadha  \n",
+    "**ROLL NO.**: BCA/45013/23  \n",
+    "**Department**: Computer Science [CSE]\n",
+    "<div style=\"page-break-after: always;\"></div>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5a34a622",
    "metadata": {},
    "source": [
     "# Python Basic Operations Practice\n",
     "\n",
     "This notebook contains basic Python programming exercises covering multiplication tables, recursion, string operations, and list manipulations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f31f26f",
+   "metadata": {},
+   "source": [
+    "<div align='center'>\n",
+    "\n",
+    "# VISION\n",
+    "\n",
+    "The department strives to be recognized for outstanding education and research, leading to excellent professionals and innovators in the field of Computer Science and Engineering, who can positively contribute to the society.\n",
+    "<div style=\"page-break-after: always;\"></div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "759ed057",
+   "metadata": {},
+   "source": [
+    "<div align='center'>\n",
+    "\n",
+    "# MISSION\n",
+    "\n",
+    "The mission of the department is to impart quality education and research, to produce innovative and globally competent technocrats as well as young researchers having sound knowledge in the fields of Computer Science & Engineering.\n",
+    "\n",
+    "1. To impart quality education and equip the students with a strong foundation that could make them capable of handling challenges of the new century.  \n",
+    "2. To maintain state of the art research facilities and facilitate interaction with world’s leading universities, industries and research organisations for constant improvement in the quality of education and research.\n",
+    "\n",
+    "<div style=\"page-break-after: always;\"></div>\n",
+    "\n",
+    "</div>"
    ]
   },
   {
